[package]
name = "autoblogger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "^1.0.0-rc.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "^0.1.0-rc.2"
bytes = "^1.4.0"
serde = { version = "^1.0.163", features = ["derive", "serde_derive"] }
reqwest = { version = "^0.11.18", features = ["blocking", "serde_json", "json"] }
comrak = "^0.18.0"
rusqlite = { version = "0.29.0", features = ["bundled", "blob", "serde_json"] }
