[package]
name = "autoblogger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "^1.4.0"
serde = { version = "^1.0.163", features = ["derive", "serde_derive"] }
reqwest = { version = "^0.11.18", features = ["blocking", "serde_json", "json", "rustls-tls"] }
comrak = "^0.18.0"
rusqlite = { version = "0.29.0", features = ["bundled", "blob", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.22"
chrono = "0.4.38"
